--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 body {
     padding: 0;
     margin: 0;
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
     background-color: var(--yello-color);
     font-family: Figtree;
     display: flex;
@@ -92,6 +92,9 @@ body {
 @media only screen and (max-width:768px) and (min-width:375px) {
     body {
         min-width: 375px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
     }
 
     .card-container {
